made a few changes go info branch

--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 h1 {color: red;}
 
-p{color: green;}
+p{color: green;
+  border: 20px;
+  padding: 10%;
+  border-color: yellow;}
 
 body{background-color: black;}
